# nightrider

./: .gitignore  CLAUDE.md  Nightride_Infrastructure_Requirements.md  Party App Db Schema V1.0.docx  Party Chat Agent Usecases.docx  Party Chat Agent use case.docx  Party Chat Agent.docx  Party DB Sceama.docx  README.md  analysis.txt  check_events.py  codemagic.yaml  db.mwb  db.mwb.bak  eventbrite_sync.py  fix_old_events.py  generate_infra_pdf.py  predicthq_sync.py  run_sync.py  seed_events.py  set_admin.py
PartyAgent/: .env.example  .gitignore  Dockerfile  README.md  agent1_event_discovery.md  agent2_party_map_navigator.md  agent3_social_companion.md  agent4_gamification.md  agent5_night_recap.md  agent6_safety_support.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py
PartyAgent/backend/: agent.py  data_source.py  debug_output.txt  main.py  models.py  requirements.txt  ticketmaster_sync.py  user_profile.json  verify_grounding.py
PartyAgent/docs/: agents.md  architecture.md  deployment.md
PartyAgent/evals/: run_evals.py
PartyAgent/evals/datasets/: event_discovery.jsonl
PartyAgent/frontend/: analysis.txt  pubspec.yaml
PartyAgent/frontend/lib/: main.dart
PartyAgent/frontend/test/: widget_test.dart
PartyAgent/scripts/: check_crawler.py  dump_events.py  migrate_db.py  refresh_events.py  run_local.py  seed_events.py
PartyAgent/src/party_agent/: config.py  graph.py
PartyAgent/tests/: conftest.py  test_cost_tracker.py  test_event_discovery.py  test_scheduler.py  test_stub_honesty.py  test_supervisor.py  test_tools.py  test_web_events.py
(+274 files in other folders)
