[project]
name = "party-chat-agent"
version = "0.1.0"
description = "Conversational AI nightlife companion built on LangGraph + Claude"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
